gvyweb.css
html, body {
  width: 100%;
  height: 100%;
}
body {
  background-color: lemonchiffon;
}
.groovy-font, .groovy-logo {
  font-family: 'Spicy Rice', fantasy;
}
.curly-font {
  font-family: 'Griffy', cursive;
}
#my-navbar,
#my-navbar .navbar-toggle:hover {
  background-color: gold;
}
#my-navbar .navbar-toggle {
  margin-left: 8px;
  margin-right: 0px;
}
.groovy-logo, .groovy-logo-color,
.cur-folder, .higher-folder,
#my-navbar .navbar-brand,
#my-navbar .navbar-text,
#my-navbar .active {
  color: darkviolet;
}
#my-navbar .navbar-nav .active,
#my-navbar .navbar-text {
  font-weight: bold
}
#my-navbar .navbar-nav :hover {
  color: deeppink;
}
.btn-primary.btn-purple, .btn-primary.btn-purple :focus {
  background-color: darkviolet;
 }
.higher-folder {
  font-size: 125%;
  text-decoration: underline;
}
.cur-folder {
  font-weight: bold;
  font-size: 150%;
  text-decoration: underline;
}
@media(max-width:767px) {
  .lower-folder {
    font-size: 125%;
  }
}
.pic-tile-panel {
  position: relative;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;

  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}
.pic-tile {
  margin-bottom: 20px;
}
.pic-tile-sm {
  width: 130px; /*2px for border*/
}
.pic-tile-sm img {
  border: solid 1px gainsboro;
}
@media(min-width: 300px) { /*room for two?*/
  .pic-tile-sm {
    margin-left: 15px;
    margin-right: 5px;
  }
}
@media(min-width: 657px) { /*room for border & margin?*/
  .pic-tile-md {
    width: 642px;
    margin-left: 15px;
  }
  .pic-tile-md img { /*640*/
    border: solid 1px gainsboro;
  }
}
@media(max-width: 656px) { /*else borderless, marginless */
  .pic-tile-md {
    width: 640px;
  }
}
@media(min-width: 1041px) {
  .pic-tile-lg {
    width: 1026px;
    margin-top: 15px;
    margin-left: 15px;
  }
  .pic-tile-lg img { /*1024*/
    border: solid 1px gainsboro;
  }
}
@media(max-width: 1040px) {
  .pic-tile-lg {
    width: 100%;
    height: 100%;
    background-color: black;
  }
  .pic-tile-pic {
    width: 100%;
    height: 100%;
  }
}
.pic-tile-pic {
  position: relative;
}
.pic-tile-pic img {
  min-width: 64px;
  min-height: 64px;
  max-width: 100%;
  max-height: 100%;
  border-bottom: none;
}
.pic-tile-text {
  float: left;
  max-width: 100%;
  padding: 3px;
  overflow-wrap: break-word;
  background-color: white;
  border: solid 1px gainsboro;
}
.btn-dim-left {
  opacity: 0.3;
  position: absolute;
  left: 15px;
  bottom: 15px;
}
.btn-dim-center {
  opacity: 0.3;
  position: absolute;
  left: 50%;
  margin-left: -26px;
  bottom: 15px;
}
.btn-dim-right {
  opacity: 0.3;
  position: absolute;
  right: 15px;
  bottom: 15px;
}
.panel-footer-drippy {
  margin-top: -20px;
  margin-bottom: 20px;
  padding-left: 10px;
  padding-right: 10px;
}

